# CVIA_trt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  index.html.1
src/: main.cpp  prj_detector.cpp  prj_detector.hpp
src/TensorRT/CUDA_tools/: cudatools.hpp
src/TensorRT/calibrator/: calibrator.cpp  calibrator.hpp
src/TensorRT/logger/: logger.cpp  logger.hpp
src/TensorRT/model/: model.cpp  model.hpp
src/TensorRT/utils/: coco_labels.hpp  imagenet_labels.hpp  utils.cpp  utils.hpp
src/ZEDX/: ZEDX.cpp  ZEDX.h
src/algorithms/: FrameLookbackEstimator.cpp  FrameLookbackEstimator.h  PeriodEstimator.cpp  PeriodEstimator.h  TrajectoryKF.cpp  TrajectoryKF.h
src/communication/: RS485.cpp  RS485.h  client.cpp  client.h
src/params/: params.hpp  pose_params.hpp
src/preprocess/: preprocess.cpp  preprocess.cu  preprocess.hpp
src/time/: time.cpp  time.hpp
src/worker/: worker.cpp  worker.hpp
src/yolov8_classifier/: classifier.cpp  classifier.hpp
src/yolov8_detector/: detector.cpp  detector.hpp
src/yolov_pose/: pose.cpp  pose.hpp
